# ZICaseStudy

./: .gitignore  README.md  pyproject.toml
notebooks/: copilot_training_notebook.ipynb  eda_notebook.ipynb  power_users_notebook.ipynb
